src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Import Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");

/* Apply the global font family */
body,
html {
  font-family: "Roboto", sans-serif;
  color: #333; /* Default text color */
}

/* Navbar styles */
.navbar {
  background-color: #ffffff;
  color: #525252; /* Matches the `text-zinc-500` in Tailwind */
  position: sticky;
  top: 0;
  width: 100%; /* Makes sure it spans the full width */
  padding: 0 16px; /* Matches `px-4` padding */
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1); /* Matches the shadow-sm */
  display: flex;
  align-items: center;
}

.navbar-icon-container {
  display: flex;
  align-items: center;
  height: 100%;
  background-color: transparent;
  justify-content: center;
}

/* About container styles */
.about-container {
  width: 90%;
  height: 80vh; /* Set the height to 80% of the viewport height */
  margin: 5vh auto; /* Center the container vertically and horizontally */
  background-color: #fff;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start; /* Align content to the top */
  align-items: center;
  overflow-y: auto; /* Enable vertical scrolling */
  overflow-x: hidden; /* Prevent horizontal scrolling */
  padding: 20px; /* Add padding inside the scrollable container */
}

/* Text container inside about section */
.about-text-container {
  width: 100%; /* Make sure the text container uses full width */
  margin: 5px 0; /* Adjust margin for better spacing */
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow-y: auto; /* Ensure this container also allows scrolling if needed */
  overflow-x: hidden; /* Prevent horizontal scrolling */
  font-family: "Roboto", sans-serif;
}

/* Wrapper container styles */
.wrapper-container {
  margin: auto;
  align-items: center;
  min-width: 90vw;
  height: 100%; /* Ensure it takes up full height */
}

/* Media query for smaller screens, such as mobile phones */
@media (max-width: 768px) {
  .about-container {
    width: 95%; /* Adjust width to fit smaller screens */
    height: 70vh; /* Slightly reduce height for better fit */
    margin: 5vh auto; /* Keep centering */
    padding: 15px; /* Reduce padding for smaller screens */
  }

  .wrapper-container {
    min-width: 100%; /* Ensure it fits within smaller screens */
  }
}

@media (max-width: 480px) {
  .about-container {
    width: 100%; /* Use full width on very small screens */
    height: 80vh; /* Further reduce height for very small screens */
    margin: 5vh auto; /* Adjust vertical centering */
    padding: 5px; /* Further reduce padding for very small screens */
  }

  .wrapper-container {
    min-width: 100%; /* Ensure it fits within smaller screens */
  }
}

svg {
  width: 256px;
  height: 256px;
}

.sidebar-icon-container {
  padding-top: 30px;
  background-color: transparent;
  justify-content: center;
}

/* Page transition animations */
.page-transition {
  opacity: 0;
  transition: opacity 0.5s ease;
}

.page-transition-enter {
  opacity: 0;
}

.page-transition-enter-active {
  opacity: 1;
}

.page-transition-exit {
  opacity: 1;
  transform: translateY(0);
  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
}

.page-transition-exit-active {
  opacity: 0;
  transform: translateY(20px);
}

/* Heading styles */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Roboto", sans-serif;
  font-weight: 700; /* Bold weight for headings */
  color: #222; /* Slightly darker text color for headings */
  margin: 0 0 20px; /* Bottom margin for spacing */
}

/* Paragraph styles */
p {
  font-family: "Roboto", sans-serif;
  font-weight: 400; /* Regular weight for body text */
  line-height: 1.6; /* Improved readability with line height */
  margin: 0 0 20px; /* Bottom margin for spacing */
}

.desk-animation {
  margin-bottom: 20px;
  transform: scale(0.8); /* Scale down to 80% */
  transform-origin: center; /* Scale from the center */
}

